objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Solution_Interest__c</fullName>
        <label>Solution Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CI/CD</fullName>
                </value>
                <value>
                    <fullName>Test Automation</fullName>
                </value>
                <value>
                    <fullName>Security &amp; Compliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_interest__c</fullName>
        <label>Subscription interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Branch Management</fullName>
                </value>
                <value>
                    <fullName>Selenium Testing</fullName>
                </value>
                <value>
                    <fullName>Continuous Integration</fullName>
                </value>
                <value>
                    <fullName>Agile Delivery</fullName>
                </value>
                <value>
                    <fullName>Compliance Hub</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Copado Academy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Architect__c</fullName>
        <label>Tech Architect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tocca_Token__c</fullName>
        <externalId>true</externalId>
        <label>Tocca Token</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Competition__c</fullName>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__DDC_Company_Id__c</fullName>
        <label>Data.com Company Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__D_B_Match_Confidence__c</fullName>
        <description>The D&amp;B Match Confidence for the company match made by Traction Complete</description>
        <inlineHelpText>The D&amp;B Match Confidence for the company match made by Traction Complete</inlineHelpText>
        <label>D&amp;B Match Confidence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__D_B_Match_Grade__c</fullName>
        <description>The D&amp;B Match Grade code for the company match made by Traction Complete</description>
        <inlineHelpText>The D&amp;B Match Grade code for the company match made by Traction Complete</inlineHelpText>
        <label>D&amp;B Match Grade</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Date_of_Last_Completion__c</fullName>
        <label>Date of Last Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Disable_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Domestic_DDC_Company_Id__c</fullName>
        <description>If Domestic Ultimate matching is enabled, the Data.com Company Id of the Domestic Ultimate record</description>
        <label>Data.com Domestic Ultimate Company Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__First_Response_Time_In_Seconds__c</fullName>
        <label>First Response Time In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__First_Response_Time_Start__c</fullName>
        <label>First Response Time Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Global_DDC_Company_Id__c</fullName>
        <description>If Global Ultimate parent matching is enabled, the Data.com Company Id of the Global Ultimate parent</description>
        <label>Data.com Global Ultimate Company Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Global_Ultimate_DUNS_Number__c</fullName>
        <label>Global Ultimate DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Lead_Match_Type__c</fullName>
        <label>Lead Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Match_Type__c</fullName>
        <label>Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__NaicsCode__c</fullName>
        <label>NAICS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__NaicsDesc__c</fullName>
        <label>NAICS Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Original_Completion_Date__c</fullName>
        <label>Original Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Original_Lead_Data__c</fullName>
        <label>Original Lead Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Parent_DDC_Company_Id__c</fullName>
        <description>If parent matching is enabled, the Data.com Company Id of the parent record</description>
        <label>Data.com Parent Company Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Re_run_Realtime_Clean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on an existing lead, the clean process will be re-invoked.</description>
        <inlineHelpText>If checked on an existing lead, the clean process will be re-invoked.</inlineHelpText>
        <label>Re-run Traction Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Company_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Traction Complete service was able to match this record to a Data.com Company</description>
        <inlineHelpText>Indicates that the Traction Complete service was able to match this record to a Data.com Company</inlineHelpText>
        <label>Traction Complete Company Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Contact_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Traction Complete service was able to match this record to a Data.com Contact</description>
        <inlineHelpText>Indicates that the Traction Complete service was able to match this record to a Data.com Contact</inlineHelpText>
        <label>Traction Complete Contact Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Error_Message__c</fullName>
        <description>The last error message received while attempting to enrich the Lead, if applicable.</description>
        <inlineHelpText>The last error message received while attempting to enrich the Lead, if applicable.</inlineHelpText>
        <label>Traction Complete Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Traction Complete process was unable to successfully enrich the record. See Traction Complete Failure Message for further details.</description>
        <inlineHelpText>The Traction Complete process was unable to successfully enrich the record. See Traction Complete Failure Message for further details.</inlineHelpText>
        <label>Traction Complete Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the record was processed by the Traction Complete service.</description>
        <inlineHelpText>Indicates if the record was processed by the Traction Complete service.</inlineHelpText>
        <label>Traction Complete Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Response_Time_Within_Business_Hours__c</fullName>
        <label>Response Time Within Business Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Restore_to_Original_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restore to Original Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__SicCode__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__SicDesc__c</fullName>
        <label>SIC Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Time_Delay_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Delay Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Time_of_Last_Auto_Merge__c</fullName>
        <label>Time of Last Auto Merge</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Traction_Complete_Custom_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Traction Complete service was able to match this record to another internal object in this Salesforce org</description>
        <inlineHelpText>Indicates that the Traction Complete service was able to match this record to another internal object in this Salesforce org</inlineHelpText>
        <label>Traction Complete Custom Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Traction_Complete_Domain__c</fullName>
        <description>Normalized text field of email domain, to be used in matching rules.</description>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Traction_Complete_Lead_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a lead has been matched to another via duplicate rules, enable Traction_Complete_Lead_Match</description>
        <label>Traction Complete Lead Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Traction_Complete_Status_Text__c</fullName>
        <formula>IF( TracRTC__Realtime_Clean_Failed__c, &apos;Error&apos;,

IF( TracRTC__Realtime_Clean_Processed__c,

IF(TracRTC__Realtime_Clean_Company_Match__c,&apos;Company&apos; &amp; IF( TracRTC__Realtime_Clean_Contact_Match__c || 
TracRTC__Traction_Complete_Lead_Match__c || TracRTC__Traction_Complete_Custom_Match__c,&apos; and &apos;,&apos;&apos;),&apos;&apos;) &amp;

IF(TracRTC__Realtime_Clean_Contact_Match__c, &apos;Contact&apos; &amp; IF( TracRTC__Traction_Complete_Lead_Match__c || TracRTC__Traction_Complete_Custom_Match__c,&apos; and &apos;,&apos;&apos;),&apos;&apos;) &amp;

IF(TracRTC__Traction_Complete_Custom_Match__c, &apos;Custom&apos; &amp; IF( TracRTC__Traction_Complete_Lead_Match__c,&apos; and &apos;,&apos;&apos;),&apos;&apos;) &amp;

IF(TracRTC__Traction_Complete_Lead_Match__c, &apos;Lead&apos;,&apos;&apos;) &amp;

IF(!TracRTC__Realtime_Clean_Company_Match__c &amp;&amp; !TracRTC__Realtime_Clean_Contact_Match__c &amp;&amp; !TracRTC__Traction_Complete_Lead_Match__c &amp;&amp; !TracRTC__Traction_Complete_Custom_Match__c,&apos;No&apos;, &apos;&apos;)


&amp; &apos; Match&apos;,&apos;Not Processed&apos;
)
)</formula>
        <label>Traction Complete Status Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Traction_Complete_Status__c</fullName>
        <formula>IF( TracRTC__Realtime_Clean_Processed__c,

IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/&apos; &amp; 
IF( TracRTC__Realtime_Clean_Company_Match__c , &apos;account_match.png&apos;, &apos;account_no_match.png&apos;), &apos;Company Match Status&apos;, 24, 24) &amp; &apos; &apos; &amp;

IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/&apos; &amp; 
IF( TracRTC__Realtime_Clean_Contact_Match__c , &apos;contact_match.png&apos;, &apos;contact_no_match.png&apos;), &apos;Contact Match Status&apos;, 24, 24) &amp; &apos; &apos; &amp;


IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/&apos; &amp;
IF( TracRTC__Traction_Complete_Custom_Match__c , &apos;custom_match.png&apos;, &apos;custom_no_match.png&apos;), &apos;Custom Match Status&apos;, 24, 24) &amp; &apos; &apos; &amp;


IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/&apos; &amp; 
IF( TracRTC__Traction_Complete_Lead_Match__c , &apos;lead_match.png&apos;, &apos;lead_no_match.png&apos;), &apos;Lead Match Status&apos;, 24, 24) &amp; &apos; &apos; &amp;


IF( TracRTC__Realtime_Clean_Failed__c,IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/error.png&apos;, &apos;Error&apos;, 24, 24), &apos;&apos;),

IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/account_grey.png&apos;, &apos;Company Match Status&apos;, 24, 24) &amp; &apos; &apos; &amp;
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/contact_grey.png&apos;, &apos;Contact Match Status&apos;, 24, 24) &amp; &apos; &apos; &amp;
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/custom_grey.png&apos;, &apos;Custom Match Status&apos;, 24, 24) &amp; &apos; &apos; &amp;
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/lead_grey.png&apos;, &apos;Lead Match Status&apos;, 24, 24) &amp; &apos; &apos; &amp;

IF( TracRTC__Realtime_Clean_Failed__c,IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;resource/TracRTC__icons/error.png&apos;, &apos;Error&apos;, 24, 24), &apos;&apos;)

)&amp; TracRTC__Traction_Complete_Status_Text__c</formula>
        <label>Traction Complete Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turn_VR_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not use unless you are an admin.</inlineHelpText>
        <label>Turn VR Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Prop_ID__c</fullName>
        <label>Value Prop ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <description>If Lead Source is &quot;Web&quot; we want to know from which page they came.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Industry__c</fullName>
        <label>6s Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Code__c</fullName>
        <label>6s NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Description__c</fullName>
        <label>6s NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Revenue_Range__c</fullName>
        <label>6s Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Code__c</fullName>
        <label>6s SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Description__c</fullName>
        <label>6s SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Segments__c</fullName>
        <label>6s Segments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Title_Function__c</fullName>
        <label>6s Title Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Title_Level__c</fullName>
        <label>6s Title Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Updated__c</fullName>
        <label>6s Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountBuyingStage6sense_Copado__c</fullName>
        <label>6sense Account Buying Stage Copado</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountIntentScore6sense_Copado__c</fullName>
        <label>6sense Account Intent Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountProfileFit6sense_Copado__c</fullName>
        <label>6sense Account Profile Fit Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountProfileScore6sense_Copado__c</fullName>
        <label>6sense Account Profile Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_30_Days__c</fullName>
        <label>Ebsta Score Trend Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_7_Days__c</fullName>
        <label>Ebsta Score Trend Last 7 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_90_Days__c</fullName>
        <label>Ebsta Score Trend Last 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Ebsta_Stats_Update__c</fullName>
        <label>Last Ebsta Stats Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Email_Activity_Date__c</fullName>
        <label>Last Email Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_month_emails_exchanged_inbound__c</fullName>
        <label>Last month emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_month_emails_exchanged_outbound__c</fullName>
        <label>Last month emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_week_emails_exchanged_inbound__c</fullName>
        <label>Last week emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_week_emails_exchanged_outbound__c</fullName>
        <label>Last week emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Out_of_office_until__c</fullName>
        <description>Ebsta out of office field.</description>
        <label>Out of office until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_emails_exchanged_inbound__c</fullName>
        <label>Total emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_emails_exchanged_outbound__c</fullName>
        <label>Total emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fbm__Funnelbeam_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>MatchingLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Best_Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Best Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain_In_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain In Sync?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain_Key__c</fullName>
        <label>Clean Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain_Last_Updated_At__c</fullName>
        <label>Domain Last Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain__c</fullName>
        <formula>IF(NOT(ISBLANK( Website )), 
	IF(OR(BEGINS(Website, &quot;http://www&quot;),BEGINS(Website, &quot;https://www&quot;), BEGINS(Website, &quot;www.&quot;)), 
	SUBSTITUTE(Website, LEFT(Website, FIND(&quot;.&quot;, Website)), NULL), 

	IF(BEGINS(Website, &quot;http://&quot;), 
	MID(Website, FIND(&apos;http://&apos;, Website, 1)+7, (LEN(Website) - FIND(&apos;http://&apos;, Website, 1)+7)), 

	IF(BEGINS(Website, &quot;https://&quot;), 
	MID(Website, FIND(&apos;https://&apos;, Website, 1)+8, (LEN(Website) - FIND(&apos;https://&apos;, Website,1)+8)), 
	Website))),

	IF(NOT(ISBLANK(Email)), 
	IF( 
	CONTAINS(Email, &quot;gmail&quot;) || CONTAINS(Email, &quot;yahoo&quot;) || CONTAINS(Email, &quot;hotmail&quot;) || CONTAINS(Email, &quot;outlook&quot;), NULL, SUBSTITUTE(Email, LEFT(Email, FIND( &quot;@&quot;, Email)), NULL) 
	), NULL)
)</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__RoutingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Rule</label>
        <referenceTo>fcio1__QueueParticipant__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>leadGrade6sense_Copado__c</fullName>
        <label>6sense Lead Grade Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadIntentScore6sense_Copado__c</fullName>
        <label>6sense Lead Intent Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadProfileFit6sense_Copado__c</fullName>
        <label>6sense Lead Profile Fit Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadProfileScore6sense_Copado__c</fullName>
        <label>6sense Lead Profile Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadUpdateDate6sense_Copado__c</fullName>
        <label>6sense Lead Update Date Copado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Counter__c</fullName>
        <label>Gift Budget Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Limit__c</fullName>
        <label>Gift Budget Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Counter__c</fullName>
        <label>Gift Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Number_Limit__c</fullName>
        <label>Gift Number Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Status__c</fullName>
        <label>Gift Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Marketing_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Test_Custom_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Custom User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Thank_You_Note__c</fullName>
        <label>Thank You Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__testDate__c</fullName>
        <label>testDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit__c</fullName>
        <label>MK Customer Fit</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_score__c</fullName>
        <label>MK Customer Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_segment__c</fullName>
        <label>MK Customer Fit Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_signals__c</fullName>
        <label>MK Customer Fit Signals</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mk_lead_grade_score__c</fullName>
        <label>MK Lead Grade Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_lead_grade_segment__c</fullName>
        <label>MK Lead Grade Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_likelihood_to_buy_score__c</fullName>
        <label>MK Likelihood To Buy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_likelihood_to_buy_segment__c</fullName>
        <label>MK Likelihood To Buy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_recent_activity__c</fullName>
        <label>MK Recent Activity</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Number_1__c</fullName>
        <label>Modigie Alternate Mobile Number 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Number_2__c</fullName>
        <label>Modigie Alternate Mobile Number 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Phone_Available__c</fullName>
        <label>Alternate Mobile Phone Number Available</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Phone_Number_Available__c</fullName>
        <formula>CASE( modigie__Alternate_Mobile_Phone_Available__c, &apos;Yes&apos;, IMAGE(&quot;/resource/modigie__Yes_word_image&quot;, &quot;Yes Image&quot;,12,22), &apos;No&apos;, IMAGE(&quot;/resource/modigie__No_Word_Image&quot;, &quot;No Image&quot;,10,20) ,&apos;&apos;)</formula>
        <label>Alternate Mobile Phone Number Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>modigie__Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>modigie__Converted_From_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Helps to Check if Contact is Converted from Lead</description>
        <label>Converted From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Enable_Validate_Employer_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Validate Employer Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Is_Dynamic_Criteria_Field_Values_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dynamic Criteria Field Values Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Mobile_Number_For_Mapping__c</fullName>
        <label>Modigie Mobile Number For Mapping</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__ModigieValidatedNumberCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ModigieValidatedNumberCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modigie Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Is_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modigie Is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Mobile_Phone_Number_Salesloft_FM__c</fullName>
        <formula>modigie__Modigie_Mobile_Phone_Number_Salesloft__c</formula>
        <label>Modigie Mobile E.164 Map To Dialer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Mobile_Phone_Number_Salesloft__c</fullName>
        <label>Modigie Mobile E.164 Format</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Verified_Number__c</fullName>
        <label>Modigie Validated Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Verified_Number_formula__c</fullName>
        <formula>modigie__Modigie_Verified_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modigie Mobile Phone Number(detail)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>modigie__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__TOM_Date__c</fullName>
        <label>TOM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__TOM_Priority_Map_To_Dialer_1__c</fullName>
        <label>TOM Priority Map To Dialer 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__TOM_Priority_Map_To_Dialer_2__c</fullName>
        <label>TOM Priority Map To Dialer 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__TOM_Priority_Map_To_Dialer_3__c</fullName>
        <label>TOM Priority Map To Dialer 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__TOM_Priority_Mobile_1__c</fullName>
        <label>TOM Priority Mobile 1</label>
        <type>Phone</type>
    </fields>
</CustomObject>